# ubx_robotscenegraph

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cleanup.sh  install.sh  latest_rsg_dump_to_pdf.sh  remote_rsgtablettest_pc.usc  rsg_robot_1.usc  rsg_robot_2.usc  rsgbridgetest.usc  rsgbridgetest2.usc  rsgczmqbridgetest.usc  rsgtablettest.usc  run_sherpa_world_model.sh  run_tablet_demo.sh  run_test.sh  run_test2.sh  sherpa_world_model.usc  show.sh  swm_launch.sh  update.sh
cmake/: FindBRICS_3D.cmake  FindMicroblx.cmake  Findjansson.cmake  cmake_uninstall.cmake.in  microblx-rsg-bridge-config.cmake.in
doc/: manual.md  monitor_states.gv
docker/: Dockerfile  README.md
examples/bridge_tests/: rsgbridgetest.usc  rsgbridgetest2.usc  rsgczmqbridgetest.usc  run_czmq.sh  run_test.sh  run_test2.sh
examples/json_api/: README.md  add.py  add_area.py  add_artva_signal.py  add_artva_signal2.py  add_command.py  add_connection.py  add_geo_pose.py  add_image.py  add_node.py  add_pose.py  add_random_root_node.py  add_root_node_attributes.py  all.json  childs_query.json  combined_osm_and_dem_query.py  configure_function_block.json  demloader_get_elevation.json  demloader_get_elevation_forest1.json  demloader_get_elevation_forest2.json  demloader_get_min_max.json  demloader_load_block.json  demloader_load_map.json  demloader_unload_block.json  execute_function_block.json  execute_function_block2.json  execute_function_block3.json  execute_osgvizualizer.json  geometry_query.json  get.py  get_all_pictures_in_area.py  get_artva_signals.py  get_meta_model_of_function_block.json  get_meta_model_of_posehistory_block.json  get_pose_list.py  get_trajectory_of_agent.py  load_function_block.json  load_osgvizualizer.json  monitor_pose.py  new_node.json  (+29 more)
examples/maps/dem/: README.md  davos.tif
examples/maps/osm/: davos.osm  map_galtelli.osm  map_micro_brsu.osm  map_micro_champoluc.osm
examples/maps/rsg/: cesena_lab.json  sar_mission.json  sar_mission_2.json  sherpa_basic_mission_setup.json
examples/multi_robot/: README.md  robot_1.sh  robot_2.sh  robot_3.sh  rsg_robot_1.usc  rsg_robot_2.usc  show.sh
examples/multi_robot/mission_scripts/: robot.py
examples/sherpa/: constraints.lua  run_sherpa_world_model.sh  run_sherpa_world_model_simulated_robot_1.sh  run_sherpa_world_model_simulated_robot_2.sh  run_sherpa_world_model_simulated_robot_3.sh  sherpa_world_model.usc  sherpa_world_model_no_ros.usc  sherpa_world_model_simulated_robot_2.usc  sherpa_world_model_simulated_robot_3.usc  sherpa_world_model_zmq.usc  sherpa_world_model_zyre.usc  sherpa_world_model_zyre_no_ros.usc
examples/sherpa/mission_scripts/: README.md  cesena_lab.dcm  champoluc_map.dcm  galtelli_example.md  galtelli_example_mission1.py  swm.py
examples/tablet_demo/: remote_rsgtablettest_pc.usc  remote_rsgtablettest_robot.usc  rsgtablettest.usc  run_remote_tablet_demo_pc.sh  run_remote_tablet_demo_robot.sh
examples/tst/: README.md  rsg_json_test_publisher.py  rsg_json_test_subscriber.py  zyre_to_zmq_bridge.py
examples/zyre/: CMakeLists.txt  README.md  add_victim_example.c  sherpa_example.c  swm_zyre.c  swm_zyre_config.json  swm_zyre_donkey.json  swm_zyre_wasp105_pub.json  swm_zyre_wasp105_sub.json  swm_zyre_wasp107_pub.json  swm_zyre_wasp107_sub.json  swm_zyre_wasp108_pub.json  swm_zyre_wasp108_sub.json  swmzyre.c  swmzyre.h
models/: rsg_bridge_package.lua  rsg_reciever.lua  rsg_sender.lua
src/: rsg_bridge_test_app.c  rsg_dump.cpp  rsg_dump.hpp  rsg_json_query.cpp  rsg_json_query.hpp  rsg_json_reciever.cpp  rsg_json_reciever.hpp  rsg_json_sender.cpp  rsg_json_sender.hpp  rsg_reciever.cpp  rsg_reciever.hpp  rsg_reciever.usc  rsg_scene_setup.cpp  rsg_scene_setup.hpp  rsg_sender.cpp  rsg_sender.hpp  rsg_sender.usc
